# bare-apk

./: CMakeLists.txt  README.md  index.js  package.json
lib/: aapt2.js  bundletool.js  fs.js
